# zappyGUI

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
ZappyGUI/: main.cpp
ZappyGui/: CMakeLists.txt
assets/: background.glb  fifthmineral.glb  firstmineral.glb  fourthmineral.glb  player.glb  secondmineral.glb  sixthmineral.glb  thirdmineral.glb
lib/Raylib/: CMakeLists.txt  IRenderer.hpp
lib/Raylib/src/: raylib.cpp  raylib.hpp
src/: CMakeLists.txt  Core.hpp  macros.hpp  main.cpp
src/audio/: Audio.cpp  Audio.hpp
src/clock/: Clock.cpp  Clock.hpp
src/communication/: CommunicationBuffer.cpp  CommunicationBuffer.hpp
src/core/: Core.cpp  Core.hpp
src/map/: Map.cpp  Map.hpp  map.cpp
src/network/: NetworkManager.cpp  NetworkManager.hpp
src/player/: Player.cpp  Player.hpp
src/raylib/: Camera.hpp  Raylib.cpp  Raylib.hpp
src/resource/: AResource.hpp  IResource.hpp
